knn_eval: split transport/response, unify stats record